--- a/src/main/resources/templates/addUserForm.html
+++ b/src/main/resources/templates/addUserForm.html
@@ -5,7 +5,20 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<div> "Add new user:" </div>
+<div>
+    <h1>Dodaj nowego użytkownika</h1>
+    <form>
+        <label>Nazwa użytkownika</label> <input type="text"/>
+        <br>
+
+        <button>Dodaj użytkownika</button>
+    </form>
+    <div>
+        <button>Pokaż wszystkich użytowników</button>
+    </div>
+</div>
+
+
 
 </body>
 </html>
