Dodawanie użytkownika do bazy przy pomocy formularza, tworzenie pustego pliku UserConfTxt, dodanie daty utworzenia użytkownika, odczyt wszystkich uzytkownikow z bazy

--- a/src/main/resources/templates/addUserForm.html
+++ b/src/main/resources/templates/addUserForm.html
@@ -12,6 +12,10 @@
         Password: <input type="text" name="password"/>
         <input type="submit" value="Submit">
     </form>
+    <br> <br>
+    <form method="get" action="/allUsers">
+        <input type="submit" value="Show all users">
+    </form>
 
 </div>
 
